[update] 言語ファイル漏れ反映
Enable auto start on startupを変更

--- a/UmaUmaChecker/locale/UmaUmaChecker.pot
+++ b/UmaUmaChecker/locale/UmaUmaChecker.pot
@@ -74,7 +74,7 @@ msgid "Enable Status Bar"
 msgstr ""
 
 #: umaumachecker\src\ui\settingdialog.cpp:117
-msgid "Enable auto start on startup."
+msgid "Enable auto start on startup"
 msgstr ""
 
 #: umaumachecker\src\ui\mainframe.cpp:212
